# DataMate

./: .editorconfig  .gitignore  LICENSE  Makefile  README-zh.md  README.md
backend/: pom.xml
runtime/datamate-python/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  uvicorn_start.sh
runtime/datamate-python/app/: exception.py  exceptions.py  main.py  middleware.py
runtime/datamate-python/app/api/: __init__.py  system.py
runtime/datamate-python/app/core/: __init__.py  config.py  exception.py  logging.py
runtime/datamate-python/app/db/: database.py  session.py
runtime/datamate-python/app/infrastructure/: __init__.py  datamate.py  label_studio.py
runtime/datamate-python/app/models/: README.md  __init__.py
runtime/datamate-python/app/module/: __init__.py
runtime/datamate-python/app/schemas/: __init__.py  common.py  dataset_mapping.py  label_studio.py
runtime/datamate-python/app/services/: __init__.py  dataset_mapping_service.py  sync_service.py
runtime/datamate-python/deploy/: docker-entrypoint.sh
runtime/datamate-python/examples/: tag_format_conversion_examples.py
runtime/ops/: README.md  __init__.py  pyproject.toml  requirements.txt
runtime/ops/annotation/: __init__.py
runtime/ops/annotation/image_object_detection_bounding_box/: __init__.py  metadata.yml  process.py
runtime/ops/annotation/image_semantic_segmentation/: process.py
runtime/ops/examples/test_operator/: README.md  metadata.yml  process.py  test_operator.tar
runtime/ops/examples/text_length_filter/: metadata.json  operator.py
runtime/ops/filter/file_with_high_repeat_phrase_rate_filter/: process.py
runtime/ops/filter/file_with_high_repeat_word_rate_filter/: process.py
runtime/ops/filter/file_with_high_special_char_rate_filter/: process.py
runtime/ops/filter/img_advertisement_images_cleaner/: process.py
runtime/ops/filter/img_blurred_images_cleaner/: process.py
runtime/ops/filter/img_duplicated_images_cleaner/: process.py
runtime/ops/filter/img_similar_images_cleaner/: process.py
runtime/ops/filter/remove_duplicate_file/: process.py
runtime/ops/filter/remove_file_with_many_sensitive_words/: process.py
runtime/ops/filter/remove_file_with_short_or_long_length/: process.py
runtime/ops/formatter/: __init__.py
runtime/ops/formatter/external_pdf_formatter/: __init__.py  metadata.yml  process.py
runtime/ops/formatter/file_exporter/: __init__.py  metadata.yml  process.py
runtime/ops/formatter/img_formatter/: __init__.py  metadata.yml  process.py
runtime/ops/formatter/mineru_formatter/: __init__.py  metadata.yml  process.py
runtime/ops/formatter/text_formatter/: __init__.py  metadata.yml  process.py
runtime/ops/formatter/unstructured_formatter/: __init__.py  metadata.yml  process.py
runtime/ops/formatter/word_formatter/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/: __init__.py
runtime/ops/mapper/content_cleaner/: process.py
runtime/ops/mapper/credit_card_number_cleaner/: process.py
runtime/ops/mapper/email_cleaner/: process.py
runtime/ops/mapper/emoji_cleaner/: process.py
runtime/ops/mapper/extra_space_cleaner/: process.py
runtime/ops/mapper/full_width_characters_cleaner/: process.py
runtime/ops/mapper/garble_characters_cleaner/: process.py
runtime/ops/mapper/html_tag_cleaner/: metadata.yml  process.py
runtime/ops/mapper/id_number_cleaner/: process.py
runtime/ops/mapper/img_denoise/: process.py
runtime/ops/mapper/img_direction_correct/: base_model.py  process.py
runtime/ops/mapper/img_enhanced_brightness/: process.py
runtime/ops/mapper/img_enhanced_contrast/: process.py
runtime/ops/mapper/img_enhanced_saturation/: process.py
runtime/ops/mapper/img_enhanced_sharpness/: process.py
runtime/ops/mapper/img_perspective_transformation/: process.py
runtime/ops/mapper/img_resize/: metadata.yml  process.py
runtime/ops/mapper/img_shadow_remove/: process.py
runtime/ops/mapper/img_type_unify/: process.py
runtime/ops/mapper/img_watermark_remove/: __init__.py  metadata.yml  process.py  watermark_ocr_model.py
runtime/ops/mapper/invisible_characters_cleaner/: process.py
runtime/ops/mapper/ip_address_cleaner/: process.py
runtime/ops/mapper/knowledge_relation_slice/: process.py
runtime/ops/mapper/legend_cleaner/: process.py
runtime/python-executor/: README.md  pyproject.toml
runtime/python-executor/datamate/: auto_annotation_worker.py  operator_runtime.py
(+989 files in other folders)
