[project]
name = "ops"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasketch>=1.8.0",
    "email-validator>=2.3.0",
    "emoji>=2.15.0",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "mineru>=2.6.5",
    "numpy==1.24.3",
    "python-multipart>=0.0.20",
    "opencv-contrib-python-headless==4.7.0.72",
    "opencv-python-headless==4.7.0.72",
    "openslide-python>=1.4.3",
    "paddleocr==2.8.1",
    "paddlepaddle==2.6.2",
    "pandas==1.5.3",
    "presidio-analyzer==2.2.25",
    "presidio-anonymizer==2.2.25",
    "pycryptodome>=3.23.0",
    "pymysql>=1.1.2",
    "python-docx>=1.2.0",
    "pytz>=2025.2",
    "six>=1.17.0",
    "spacy==3.7.0",
    "sqlalchemy>=2.0.44",
    "xmltodict>=1.0.2",
    "zhconv>=1.4.3",
]
